<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <!--parent>
    <groupId>org.openflexo</groupId>
    <artifactId>openflexo-production</artifactId>
    <version>0.2</version>
  </parent-->
  <groupId>org.openflexo</groupId>
  <artifactId>site_sample</artifactId>
  <version>1.0</version>
  <packaging>pom</packaging>
  <properties>
    <ant.version>1.9.0</ant.version>
    <compiler.source>1.6</compiler.source>
    <compiler.target>1.6</compiler.target>
    <hibernate.version>4.2.3.Final</hibernate.version>
    <jersey.version>1.17.1</jersey.version>
    <organization.name>Openflexo</organization.name>
    <organization.url>http://www.openflexo.org</organization.url>
    <organization.logo>https://media.openflexo.org/images/OpenFlexo_Logo.png</organization.logo>
    <!-- need this so that sonar run properly. don't know what the difference 
			with source.encoding. todo : investigate difference between source.encoding 
			and project.build.sourceEncoding -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <product.name>OpenFlexo</product.name>
    <resource.encoding>UTF-8</resource.encoding>
    <source.encoding>UTF-8</source.encoding>
    <swingx.version>1.6.3</swingx.version>
    <javahelp.version>2.0.05</javahelp.version>
    <!-- reporting tools -->
    <findbugs.version>2.5.2</findbugs.version>
    <checkstyle.version>2.9.1</checkstyle.version>
    <surefire.reportplugin.version>2.12.4</surefire.reportplugin.version>
    <cobertura.version>2.5.2</cobertura.version>
    <mavensite.version>3.2</mavensite.version>
  </properties>
  <distributionManagement>
    <site>
      <id>website</id>
      <url>scp://org.openflexo.org/www/website</url>
    </site>
  </distributionManagement>
  <modules>
    <module>module1</module>
    <module>module2</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>2.4.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.7</version>
          <configuration>
            <retryFailedDeploymentCount>3</retryFailedDeploymentCount>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>1.7</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>2.7</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>${compiler.source}</source>
            <target>${compiler.target}</target>
            <encoding>${source.encoding}</encoding>
            <fork>false</fork>
            <compilerId>jdt</compilerId>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.eclipse.tycho</groupId>
              <artifactId>tycho-compiler-jdt</artifactId>
              <version>0.13.0</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.7.1</version>
          <configuration>
            <!--  <forkMode>always</forkMode> -->
            <!-- SGU: why this ? i remove it ? Was it necessary ? -->
            <runOrder>alphabetical</runOrder>
            <forkCount>0</forkCount>
            <argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>2.0</version>
          <configuration>
            <sonarHostURL>https://sonar.openflexo.com</sonarHostURL>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <versionRange>[2.0,)</versionRange>
                    <goals>
                      <goal>compile</goal>
                      <goal>testCompile</goal>
                    </goals>
                    <parameters>
                      <compilerId>jdt</compilerId>
                    </parameters>
                  </pluginExecutionFilter>
                  <action>
                    <configurator>
                      <id>org.eclipse.m2e.jdt.javaConfigurator</id>
                    </configurator>
                  </action>
                </pluginExecution>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>org.jvnet.ws.wadl</groupId>
                    <artifactId>wadl-client-plugin</artifactId>
                    <versionRange>[1.0,)</versionRange>
                    <goals>
                      <goal>generate</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <ignore/>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.5</version>
          <configuration>
            <encoding>${resource.encoding}</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <!--version>3.2</version-->
          <!-- use maven-site-plugin 2.4 due to bug : https://jira.codehaus.org/browse/MSITE-604 -->
          <version>${mavensite.version}</version>
          <configuration>
            <!--locales>en</locales-->
            <inputEncoding>utf-8</inputEncoding>
            <outputEncoding>utf-8</outputEncoding>
            <!--locales>fr_FR.UTF-8</locales-->
            <!--templateFile>${basedir}/maven-site.vm</templateFile-->
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>dashboard-maven-plugin</artifactId>
          <version>1.0.0-beta-1</version>
          <configuration>
            <configLocation>myDashboardConfig.xml</configLocation>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.9</version>
          <configuration>
            <source>1.6</source>
            <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
            <docletArtifact>
              <groupId>org.umlgraph</groupId>
              <artifactId>doclet</artifactId>
              <version>5.1</version>
            </docletArtifact>
            <additionalparam>
					-operations -visibility
				</additionalparam>
            <useStandardDocletOptions>true</useStandardDocletOptions>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.umlgraph</groupId>
              <artifactId>doclet</artifactId>
              <version>5.1</version>
            </dependency>
          </dependencies>
          <!--configuration>
                    <source>1.5</source>
                    <doclet>
                        gr.spinellis.umlgraph.doclet.UmlGraphDoc
                    </doclet>
                    <docletArtifact>
                        <groupId>gr.spinellis</groupId>
                        <artifactId>UmlGraph</artifactId>
                        <version>4.4</version>
                    </docletArtifact>
                    <additionalparam>
                        -inferrel -inferdep -quiet -hide java.*
                        -collpackages java.util.* -qualify
                        -postfixpackage -nodefontsize 9
                        -nodefontpackagesize 7 -attributes -operations
                        -enumerations -enumconstants -visibility 
                        -link "http://java.sun.com/j2se/1.5/docs/api/" 
                        -link "http://static.springframework.org/spring/docs/2.0.x/api/"
                        -link "http://www.hibernate.org/hib_docs/v3/api/"
                    </additionalparam>
                </configuration-->
          <!-- http://www.umlgraph.org/ -->
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${findbugs.version}</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>${cobertura.version}</version>
        <configuration>
          <formats>
            <format>xml</format>
            <format>html</format>
          </formats>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>cobertura</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
        <version>2.0-beta-2</version>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
        <version>2.0-beta-2</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>dashboard-maven-plugin</artifactId>
        <version>1.0.0-beta-1</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${findbugs.version}</version>
        <configuration>
          <xmlOutput>true</xmlOutput>
          <effort>Max</effort>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>${surefire.reportplugin.version}</version>
        <configuration>
          <aggregate>true</aggregate>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <version>${cobertura.version}</version>
        <configuration>
          <aggregate>true</aggregate>
          <formats>
            <format>xml</format>
            <format>html</format>
          </formats>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.3</version>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.7</version>
        <inherited>true</inherited>
        <configuration>
          <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
          <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
        </configuration>
        <reportSets>
          <reportSet>
            <reports>
              <report>summary</report>
              <report>dependencies</report>
              <report>dependency-convergence</report>
              <report>dependency-info</report>
              <report>dependency-management</report>
              <report>distribution-management</report>
              <report>issue-tracking</report>
              <report>project-team</report>
              <report>mailing-list</report>
              <report>cim</report>
              <report>issue-tracking</report>
              <report>license</report>
              <report>scm</report>
              <!--
				      project-info-reports:cim is used to generate the Project Continuous Integration System report.
    project-info-reports:dependencies is used to generate the Project Dependencies report.
    project-info-reports:dependency-convergence is used to generate the Project Dependency Convergence report for reactor builds.
    project-info-reports:dependency-info (new in 2.5) is used to generate code snippets to be added to build tools.
    project-info-reports:dependency-management is used to generate the Project DependencyManagement report.
    project-info-reports:distribution-management is used to generate the Project Distribution Management report.
    project-info-reports:help is used to display help information on the Project Info Reports Plugin.
    project-info-reports:index is used to generate the Project index page.
    project-info-reports:issue-tracking is used to generate the Project Issue Tracking report.
    project-info-reports:license is used to generate the Project License report.
    project-info-reports:mailing-list is used to generate the Project Mailing List report.
    project-info-reports:modules is used to generate the Project Modules report.
    project-info-reports:plugin-management is used to generate the Project PluginManagement report.
    project-info-reports:plugins is used to generate the Project Plugins report.
    project-info-reports:project-team is used to generate the Project Team report.
    project-info-reports:scm is used to generate the Project Source Code Management report.
    project-info-reports:summary is used to generate the Project information reports summary.
				  -->
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>2.7</version>
        <reportSets>
          <reportSet>
            <id>analyze-report</id>
            <inherited>false</inherited>
            <reports>
              <report>analyze-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.9</version>
        <inherited>true</inherited>
        <reportSets>
          <reportSet>
            <!-- by default, id = "default" -->
            <reports>
              <!-- select non-aggregate reports -->
              <report>javadoc</report>
              <report>test-javadoc</report>
            </reports>
          </reportSet>
          <reportSet>
            <!-- aggregate reportSet, to define in poms having modules -->
            <id>aggregate</id>
            <inherited>true</inherited>
            <!-- don't run aggregate in child modules -->
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>
</project>
